force-app/main/default/objects/PWChrono_Staffing_Plan_Detail__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipLabel>Staffing Plan Details</relationshipLabel>
    <relationshipName>Staffing_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>