force-app/main/default/objects/PWChrono_Staffing_Plan_Detail__c/fields/Staffing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Plan__c</fullName>
    <label>Staffing Plan</label>
    <referenceTo>PWChrono_Staffing_Plan__c</referenceTo>
    <relationshipLabel>Staffing Plan Details</relationshipLabel>
    <relationshipName>Staffing_Plan_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>