force-app/main/default/objects/PWChrono_Staffing_Plan_Detail__c/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <formula>Vacancies__c * Estimated_Cost_Per_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>