force-app/main/default/objects/PWChrono_Staffing_Plan_Detail__c/fields/Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Vacancies__c</fullName>
    <label>Vacancies</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>